# shelf-life

./: .env.example  README.md  app.py  pyproject.toml
models/: food_item.py
services/: image_reader_service.py
